<resources>
    <string name="app_name">Appotekid-android</string>
    <string name="app_icon_name">Appótekið</string>
    <string name="recognise">Recognise</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to Main activity -->
    <string name="take_picture">Capture Code</string>
    <string name="see_doctor">See my doctor</string>
    <string name="view_medicine">View my medicine</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_passwords_mismatch">The passwords are not the same</string>
    <string name="error_passwords_short">Minumum length of the password is 6 letters</string>
    <string name="error_username_same">username already exists</string>
    <string name="error_socialId_same">Social ID already exist, please select your own</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_doctor">DoctorActivity</string>
    <string name="title_activity_view_medicine">ThisSomeBullShit</string>
    <string name="large_text">
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cabinet">CabinetActivity</string>
    <string name="title_activity_view_patients">ViewPatientsActivity</string>
    <string name="view_cabinet">View Cabinet</string>
    <string name="view_Patients">View My Patients</string>
    <string name="view_All_Patients">View All Patients</string>
    <string name="Try_Login">try Login</string>
    <string name="title_activity_register">Create an account</string>
    <string name="action_register">Register</string>
    <string name="re_prompt_password">Retype password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_username">Username</string>
    // Search Engine specific Strings.
    <string name="search_hint">Search Database</string>
    <string name="app_label">SearchMACHINERAFNAR</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="title_activity_specific_medicine">SpecificMedicineActivity</string>

    //Alarm Manager
    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>


    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>

    <string name="reminder_title">Appótekið Áminning</string>

    <string name="view_Alarms">View Alarms</string>
    <string name="delete">Delete</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="connection_failed">Connection failed, please connect to the internet</string>
    <string name="connection_failed_please_connect_to_the_internet">Connection failed, please connect to the internet</string>
    <string name="title_activity_view_patients_scroll">ViewPatientsActivityScroll</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
