<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--TextureView
        android:id="@+id/texture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_takepicture"
        android:layout_alignParentTop="true"
        android:layout_marginTop="43dp"
        android:layout_marginBottom="53dp" /-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp">


        <Button
            android:id="@+id/btn_switchViewMedicine"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:backgroundTint="@color/colorRed"
            android:onClick="openViewMedicine"
            android:text="@string/view_medicine"
            android:textColor="@android:color/white"
            tools:text="See Medicine" />

        <Button
            android:id="@+id/btn_switchCabinet_patients"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/colorRed"
            android:onClick="openCabinet"
            android:text="@string/view_cabinet"
            android:textColor="@android:color/white"
            tools:text="See Cabinet" />

        <Button
            android:id="@+id/btn_AlarmReminder"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/colorRed"
            android:onClick="openNotification"
            android:text="@string/view_Alarms"
            android:textColor="@android:color/white"
            tools:text="Alarms" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="553dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_takepicture"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="321dp"
            android:backgroundTint="@color/colorRed"
            android:onClick="openCamera"
            android:text="@string/take_picture"
            android:textColor="@android:color/white"
            android:background = "@drawable/toolbar_dropshadow"
            tools:text="Scan Code" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:layout_marginStart="0dp"
        android:gravity="center">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:iconifiedByDefault="false"
            android:queryHint="Search here">

        </SearchView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|end"
            app:srcCompat="@android:drawable/ic_delete" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="103dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:inputType="none"
            />


    </LinearLayout>


</RelativeLayout>